--- a/Flaintartist/Base.lproj/Main.storyboard
+++ b/Flaintartist/Base.lproj/Main.storyboard
@@ -1411,7 +1411,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="imf-Bg-S7i" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2873" y="838"/>
+            <point key="canvasLocation" x="1386" y="1726"/>
         </scene>
         <!--Capture DetailsVC-->
         <scene sceneID="ch9-M2-d7I">
@@ -1497,7 +1497,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="eV1-lX-swA" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3596" y="838"/>
+            <point key="canvasLocation" x="2110" y="1726"/>
         </scene>
         <!--Capture-->
         <scene sceneID="EAj-bp-R4H">
@@ -1540,7 +1540,7 @@
                         <autoresizingMask key="autoresizingMask"/>
                     </toolbar>
                     <connections>
-                        <segue destination="j5c-Dw-Hlz" kind="relationship" relationship="rootViewController" id="471-ZE-lPW"/>
+                        <segue destination="0HX-jn-0aa" kind="relationship" relationship="rootViewController" id="XX4-hn-x9R"/>
                     </connections>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="gbm-ei-hqy" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -2504,6 +2504,89 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dzm-eq-RIS" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="2492" y="-636.4317841079461"/>
+        </scene>
+        <!--Upload PhotoVC-->
+        <scene sceneID="MSi-ye-eMw">
+            <objects>
+                <viewController id="0HX-jn-0aa" customClass="UploadPhotoVC" customModule="Flaintartist" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="P1N-wu-fId"/>
+                        <viewControllerLayoutGuide type="bottom" id="y0C-5F-U59"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="8e9-Zl-O0W">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="AiM-Dn-79g">
+                                <rect key="frame" x="0.0" y="451" width="375" height="216"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="216" id="qWX-fV-7Kz"/>
+                                </constraints>
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="1" minimumInteritemSpacing="1" id="zy3-e8-YvU">
+                                    <size key="itemSize" width="101" height="108"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="UploadPhotoCell" id="af5-qz-LSm">
+                                        <rect key="frame" x="0.0" y="0.0" width="100" height="100"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
+                                            <rect key="frame" x="0.0" y="0.0" width="100" height="100"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView userInteractionEnabled="NO" tag="1" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="06V-7P-Saf">
+                                                    <rect key="frame" x="0.0" y="0.0" width="100" height="108"/>
+                                                </imageView>
+                                            </subviews>
+                                        </view>
+                                        <constraints>
+                                            <constraint firstAttribute="trailing" secondItem="06V-7P-Saf" secondAttribute="trailing" id="M8V-oy-BKC"/>
+                                            <constraint firstItem="06V-7P-Saf" firstAttribute="leading" secondItem="af5-qz-LSm" secondAttribute="leading" id="cSa-OE-e5Z"/>
+                                            <constraint firstItem="06V-7P-Saf" firstAttribute="top" secondItem="af5-qz-LSm" secondAttribute="top" id="hr3-nA-4UQ"/>
+                                            <constraint firstAttribute="bottom" secondItem="06V-7P-Saf" secondAttribute="bottom" id="inO-Cw-OKX"/>
+                                        </constraints>
+                                        <size key="customSize" width="100" height="100"/>
+                                    </collectionViewCell>
+                                </cells>
+                            </collectionView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" layoutMarginsFollowReadableWidth="YES" image="artist" translatesAutoresizingMaskIntoConstraints="NO" id="8bw-wG-Nna">
+                                <rect key="frame" x="0.0" y="64" width="375" height="379"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="379" id="V2r-RM-8x7"/>
+                                </constraints>
+                            </imageView>
+                            <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Cdy-zj-Lcs">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                                <items>
+                                    <navigationItem title="Upload" id="Lw6-zG-k4n"/>
+                                </items>
+                            </navigationBar>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="AiM-Dn-79g" firstAttribute="bottom" secondItem="y0C-5F-U59" secondAttribute="top" id="1pQ-JR-SAq"/>
+                            <constraint firstItem="8bw-wG-Nna" firstAttribute="top" secondItem="Cdy-zj-Lcs" secondAttribute="bottom" constant="20" id="Ezs-UX-5dL"/>
+                            <constraint firstItem="y0C-5F-U59" firstAttribute="top" secondItem="8bw-wG-Nna" secondAttribute="bottom" constant="224" id="HvC-qo-tMD"/>
+                            <constraint firstItem="AiM-Dn-79g" firstAttribute="trailing" secondItem="8bw-wG-Nna" secondAttribute="trailing" id="OfS-jn-feJ"/>
+                            <constraint firstItem="AiM-Dn-79g" firstAttribute="leading" secondItem="Cdy-zj-Lcs" secondAttribute="leading" id="ang-fm-wVv"/>
+                            <constraint firstItem="AiM-Dn-79g" firstAttribute="leading" secondItem="8bw-wG-Nna" secondAttribute="leading" id="eyu-ze-i9O"/>
+                            <constraint firstItem="AiM-Dn-79g" firstAttribute="trailing" secondItem="Cdy-zj-Lcs" secondAttribute="trailing" id="lUB-XQ-Mnz"/>
+                            <constraint firstItem="8bw-wG-Nna" firstAttribute="leading" secondItem="8e9-Zl-O0W" secondAttribute="leading" id="mVY-oh-Pp0"/>
+                            <constraint firstAttribute="trailing" secondItem="8bw-wG-Nna" secondAttribute="trailing" id="wkU-3X-nrT"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="hhY-wm-IHx"/>
+                    <connections>
+                        <outlet property="collectionView" destination="AiM-Dn-79g" id="J9W-cV-k4g"/>
+                        <outlet property="photoImageView" destination="8bw-wG-Nna" id="6AN-yg-CxE"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="43u-pz-UGE" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2893.5999999999999" y="837.93103448275872"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="8LY-jB-ZxX">
